--- a/index.html
+++ b/index.html
@@ -1,3 +1,39 @@
-<h1> Construindo ainda monas</h1>
+<!DOCTYPE html>
+<html>
 
-<iframe src="https://calendar.google.com/calendar/embed?height=700&wkst=1&ctz=America%2FSao_Paulo&bgcolor=%23ffffff&mode=WEEK&src=OTFjOGNiYmU1ODY0NjRmMmRmOTliZDEyNTYxYTg0OTgxNGQ2ODEwNWViOGNjODlmMmMzYjIzMTg5NDg3MzViMkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23616161" style="border:solid 1px #777" width="1200" height="700" frameborder="0" scrolling="no"></iframe>
+<head>
+  <meta charset="UTF-8" />
+  <title>Hello World</title>
+  <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+
+  <!-- Don't use this in production: -->
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="text/babel">
+
+    function MyApp() {
+      return <h1>Hello, world!</h1>;
+    }
+
+    const container = document.getElementById('root');
+    const root = ReactDOM.createRoot(container);
+    root.render(<MyApp />);
+
+  </script>
+  <!--
+      Note: this page is a great way to try React but it's not suitable for production.
+      It slowly compiles JSX with Babel in the browser and uses a large development build of React.
+
+      Read this page for starting a new React project with JSX:
+      https://react.dev/learn/start-a-new-react-project
+
+      Read this page for adding React with JSX to an existing project:
+      https://react.dev/learn/add-react-to-an-existing-project
+    -->
+</body>
+
+</html>
