--- a/index.html
+++ b/index.html
@@ -89,6 +89,15 @@
       color: rgb(16, 4, 71);
       text-decoration: none;
     }
+
+    .update-bar {
+      background-color: #8194c7;
+      /* Verde claro */
+      color: white;
+      padding: 10px;
+      text-align: center;
+      font-size: 14px;
+    }
   </style>
 </head>
 
@@ -96,6 +105,9 @@
   <header>
     <h1>🇧🇷 Brasil nas Olimpíadas 2024!</h1>
   </header>
+  <div class="update-bar">
+    Última atualização do calendário: 26 de julho, 1h da matina
+  </div>
   <main>
     <h2>Informações sobre o calendário</h2>
     <ul>
