fix venue description

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <h1>🇧🇷 Brasil nas Olimpíadas 2024!</h1>
   </header>
   <div class="update-bar">
-    Última atualização do calendário: 26 de julho, 1h da matina
+    Última atualização do calendário: 26 de julho, 13:26
   </div>
   <main>
     <h2>Informações sobre o calendário</h2>
