--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <li>Cada evento contém no título <code>ESPORTE | Evento</code>.</li>
       <ul>
         <li>Em casos de esportes coletivos, os títulos vão conter o adversário do Brasil.</li>
-        <li>Esportes coletivos têm o nome dos competidores na descrição.</li>
+        <li>Esportes individuais têm o nome dos competidores na descrição.</li>
       </ul>
       <li>As descrições contêm o local e o status do evento (Concluído, Programado, Cancelado, etc).</li>
       <li>Ele vai ser atualizado periodicamente, no mínimo uma vez por dia, com novos eventos ou alterações em eventos
