--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <h1>🇧🇷 Brasil nas Olimpíadas 2024!</h1>
   </header>
   <div class="update-bar">
-    Última atualização do calendário: 02 de julho, 00:14
+    Última atualização do calendário: 07 de agosto, 00:04
   </div>
   <main>
     <h2>Informações sobre o calendário</h2>
